Fix accordion content spacing on mobile

--- a/faq-accordion-card-main/accordion.scss
+++ b/faq-accordion-card-main/accordion.scss
@@ -29,7 +29,7 @@ $font_size: 1.2rem;
   cursor: pointer;
   position: relative;
   transition: background 0.1s;
-  padding: 0.5rem 0 0.5rem 0;
+  padding: 0.5rem 2rem 0.5rem 0;
 
   &:hover {
     color: hsl(14, 88%, 65%);
@@ -64,7 +64,7 @@ $font_size: 1.2rem;
   &:checked ~ .accordion__content {
     opacity: 1;
     transform: translate(0, 0);
-    max-height: 100px;
+    max-height: 120px;
     padding: 1rem 0 1rem 0;
   }
 
@@ -90,5 +90,11 @@ $font_size: 1.2rem;
 
   .card__heading {
     text-align: center;
+  }
+
+  .accordion__content,
+  .accordion__label,
+  .accordion__input:checked ~ .accordion__label {
+    font-size: 1rem;
   }
 }
