--- a/faq-accordion-card-main/styles.css
+++ b/faq-accordion-card-main/styles.css
@@ -59,7 +59,7 @@ body {
   cursor: pointer;
   position: relative;
   transition: background 0.1s;
-  padding: 0.5rem 0 0.5rem 0;
+  padding: 0.5rem 2rem 0.5rem 0;
 }
 .accordion__label:hover {
   color: #f47c57;
@@ -91,7 +91,7 @@ body {
 .accordion__input:checked ~ .accordion__content {
   opacity: 1;
   transform: translate(0, 0);
-  max-height: 100px;
+  max-height: 120px;
   padding: 1rem 0 1rem 0;
 }
 .accordion__input:checked ~ .accordion__label::after {
@@ -110,6 +110,12 @@ body {
 
   .card__heading {
     text-align: center;
+  }
+
+  .accordion__content,
+.accordion__label,
+.accordion__input:checked ~ .accordion__label {
+    font-size: 1rem;
   }
 }
 .card__images {
